--- a/css/style.css
+++ b/css/style.css
@@ -299,10 +299,22 @@ h1.logo:before {
 }
 
 .pie {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   position: relative;
-  text-indent: -9999px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.pie .value {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 340%;
+  z-index: 300;
+  font-weight: lighter;
 }
 
 .pie-center {
@@ -317,26 +329,22 @@ h1.logo:before {
   z-index: 200;
 }
 
-.pie::before {
-  content: " ";
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: white;
-  z-index: 10;
+.background {
+  background-color: #dfe8ed;
+  border-radius: 50%;
 }
 
-.more-than-50 {
+.background, .more-than-50, .less-than-50 {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0;
-  background-color: red;
+  right: 0;
+}
+
+.more-than-50 {
   border-radius: 50% 0 0 50%;
-  clip: rect(0 50px 100px 0);
+  clip: rect(0 100px 200px 0);
   overflow: hidden;
   -webkit-transition: transform 0.3s;
   -moz-transition: transform 0.3s;
@@ -347,20 +355,30 @@ h1.logo:before {
 }
 
 .less-than-50 {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  background-color: red;
   border-radius: 0 50% 50% 0;
-  clip: rect(0px, 100px, 100px, 50px);
+  clip: rect(0px, 200px, 200px, 100px);
   overflow: hidden;
   -webkit-transition: transform 0.3s;
   -moz-transition: transform 0.3s;
   -ms-transition: transform 0.3s;
   -o-transition: transform 0.3s;
   transition: transform 0.3s;
+}
+
+.skill:nth-of-type(1) .ring {
+  background-color: #30bae7;
+}
+
+.skill:nth-of-type(2) .ring {
+  background-color: #d74680;
+}
+
+.skill:nth-of-type(3) .ring {
+  background-color: #15c7a8;
+}
+
+.skill:nth-of-type(4) .ring {
+  background-color: #eb7d4b;
 }
 
 #portfolio {
